Revision history for Perl extension ExtUtils::ParseXS.

3.18_03 - Fri Apr 19 18:40:00 CET 2013
  - Heuristic (and flawed) type canonicalization for templated
    C++ types.
  - More tests ported from core.

3.18_02 - Mon Apr 15 07:30:00 CET 2013
  - ExtUtils::ParseXS no longer uses global state (if using OO
    interface).
  - New "real" OO interface.

3.18_01 - Thu Apr 11 19:17:00 CET 2013
  - ExtUtils::Typemaps gains a clone method.

3.18 - Mon Nov 19 07:35:00 CET 2012
  - Restore portability to Perl 5.6, which was lost at EU-PXS 3.00.
  - [perl #112776] avoid warning on an initialized non-parameter
  - Only increment PL_amagic_generation before 5.9

3.15 - Thu Feb  2 08:12:00 CET 2012
  - Fix version for PAUSE indexer.

3.14 - Wed Feb  1 18:22:00 CET 2012
  - Promote to stable release.
  - Proper repository and bugtracker info in META.json.

3.13_01 - Sat Jan 29 12:45:00 CET 2012
  - ExtUtils::Typemaps:
    => Embedded typemap dumping: A method which will produce the
       verbatim string for inclusion in XS.
    => Introducing ExtUtils::Typemaps::Cmd, a helper module which
       can produce embedded typemap strings via simple one-liners.
       Useful for including typemaps from other modules in XS code
       with INCLUDE_COMMAND. See "perldoc ExtUtils::Typemaps::Cmd".

  - ExtUtils::ParseXS:
    => Bugfix: Used to have parsing problems with embedded typemaps
       occasionally.
    => Better error messages on typemap-related issues. If a no
       typemap was found for a given C type, list all mapped C types
       so that the user hopefully spots his mistake easily.

3.11 - Thu Dec 29 17:55:00 CET 2011
  - Version/distribution fixes.

3.09 - Wed Dec 28 18:48:00 CET 2011
  - Escape double quotes of file names/commands in #line directives.

3.08 - Mon Dec 19 18:03:00 CET 2011
  - Silence undefined-value-in-addition warning
    (Nothing serious, just happened sometimes when reporting line numbers for
    errors. But warning during build process.)
