@@ -1,5 +1,8 @@
 Revision history for Perl extension ExtUtils::ParseXS.
 
+  - stop "sv_2mortal(&PL_sv_yes)" and "(void)sv_newmortal()" for immortal
+    typemap entries [perl #116152]
+
 3.18_03 - Fri Apr 19 18:40:00 CET 2013
   - Heuristic (and flawed) type canonicalization for templated
     C++ types.
